# cpu1

./: .gitignore  main.py  mccompile.py  pyproject.toml  readme.md  test.mcasm  test_trace_tick_io.yml.md  tree_structure
.github/workflows/: python.yml
compiler/: funclib.py  isa.py  main.py  mapper.py  models.py  stdlib.py  syntax.md  transformer.py  utils.py
compiler/forth/: funclib.py  main.py  models.py  stdlib.py  transformer.py  utils.py
docs/: arch.md  forth.md  io.md  isa.md  mcasm.md  mcisa.md  mem.md  merge.py  readme.md.template  scheme.circ  sim.md
docs/enums/: readme.md  readme.py
docs/isa/: readme.md  readme.py
docs/mcisa/: readme.md  readme.py
isa/: Instruction.py  instructions.py  isa.md  isa.py  main.py  opcodes.py
machine/: arch.py  config.py  cpu.py
machine/components/: ALU.py  RAM.py  ROM.py  Stack.py
machine/datapath/: datapath.py  regfile.py
machine/mc/: decoders.py  mc.py  mcisa.py
machine/mc/code/: main.mcasm  mcrom.py
machine/utils/: enums.py  gtkwave.py  hdl.py  introspection.py  testutils.py
mcasm/: parse.py  synth.py  test.py  uasm.lark  utils.py
src/: RAM.py  ROM.py  arch.py  base.py  config.py  cpu.py  mccompile.py  parse.py  test.py  uasm.lark
src/compiler/: main.py  memory.py  syntax.md  transformer.py
src/compiler/forthlib/: iolib.fth  stdlib.py
src/compiler/translator/: funclib.py  main.py  models.py  stdlib.py  transformer.py  utils.py
src/compiler/utils/: funclib.py  models.py  synthetic.py
src/components/: ALU.py  RAM.py  ROM.py  base.py  config.py  mux.py
src/datapath/: datapath.py  regfile.py
src/isa/: gendoc.py  isa.md  main.py  mcisa.py  readme.py
src/isa/model/: instructions.py  opcodes.py
src/machine/: __init__.py  arch.py  bus.py  config.py  cpu.py  main.py  readme.md  readme.py
src/machine/components/: ALU.py  ExtendedStack.py  RAM.py  ROM.py  Stack.py  __init__.py  base.py  mux.py  regfile.py
src/machine/io/: bus.py  (+3 more)
src/mc/: decoders.py  mc.py  mcisa.py  mcseq.py
src/mcasm/: grammar.py  mccompile.py  parse.py  synth.py  test.py  uasm.lark  utils.py
test/: alu.py  test_aaa.py  test_alu.py  test_alu_flags.py  test_base.py  test_cpu_2.py  test_cpu_aluflags.py  test_cpu_basic.py  test_cpu_mcseq.py  test_cpu_mem_read.py  test_cpu_mem_rw.py  test_cpu_regio.py  test_cpu_stack.py  test_machine_io.py  test_mc.py  test_mccpu_infetch.py  test_mccpu_instrs.py  test_mccpu_io.py  test_mux.py  test_ram.py  test_regfile.py  test_rom.py  test_stack.py  test_stack_2.py  test_utils.py  utils.py
test/golden/: cli.py  formatter.py  introspection.py  models.py  runner.py  test_golden.py  test_trace_instr_io.yml.md  testbench.py
utils/: enums.py  gtkwave.py  hdl.py  introspection.py  log.py  runutils.py  testutils.py
(+50 files in other folders)
